chore: minor code refactorings.